--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=BankSystem
 server.port=8100
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=create
